Fix overflow on body

--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -4,7 +4,7 @@
 	.main {
 		max-width: 767px;
 		margin: 0 auto;
-		padding: 50px 10px 0;
+		padding: 50px 10px;
 
 		a {
 			margin: 20px 0 0;
