--- a/sass/assets/_typography.scss
+++ b/sass/assets/_typography.scss
@@ -3,6 +3,7 @@ body {
     flex-direction: column;
     min-height: 100vh;
 	font: 13px/1.1 "Roboto", sans-serif;
+	text-align: center;
 }
 
 h1,
