--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,8 +4,3 @@
 @import 'header';
 @import 'main';
 @import 'footer';
-
-body {
-	text-align: center;
-	overflow: hidden;
-}
